# deepfry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_STATUS.md  Dockerfile.strfry  Dockerfile.whitelist-server  README.md  docker-compose.dgraph.yml  docker-compose.evtfwd.yml  docker-compose.lmdb2graphql.yml  docker-compose.strfry.yml  docker-compose.yml  forwarder-commands.sh  nostr-patterns.md  stream-relays.sh  switch-dgraph.sh
.github/: copilot-instructions.md
LMDB2GraphQL/: CLAUDE.md  Cargo.toml  Dockerfile  LMDB2GRAPHQL-CRASH-REPORT.md  README.md
LMDB2GraphQL/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
LMDB2GraphQL/.planning/debug/: adapter-crash-heavy-query.md
LMDB2GraphQL/.planning/phases/01-lmdb-foundation-comparator-proof/: 01-01-PLAN.md  01-04-PLAN.md  01-PATTERNS.md  01-RESEARCH.md  01-VERIFICATION.md
LMDB2GraphQL/.planning/phases/02-payload-decoding-index-scan-primitives/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md
LMDB2GraphQL/.planning/phases/03-query-engine/: 03-02-SUMMARY.md  03-04-PLAN.md  03-07-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-10-PLAN.md  03-11-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-REVIEW.md
LMDB2GraphQL/.planning/phases/04-graphql-api/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-VERIFICATION.md
LMDB2GraphQL/.planning/phases/05-hardening-docker-packaging/: 05-03-SUMMARY.md  05-REVIEW.md  05-VERIFICATION.md
LMDB2GraphQL/.planning/phases/06-cors-support/: 06-01-PLAN.md  06-01-SUMMARY.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW.md  06-VERIFICATION.md
LMDB2GraphQL/.planning/phases/07-distinct-author-enumeration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-REVIEW.md  07-VERIFICATION.md
LMDB2GraphQL/.planning/quick/260615-1e6-fixture-free-self-check/: 260615-1e6-PLAN.md
LMDB2GraphQL/.planning/quick/260624-ogw-add-a-docker-compose-service-for-lmdb2gr/: 260624-ogw-PLAN.md  260624-ogw-SUMMARY.md
LMDB2GraphQL/.planning/research/: SUMMARY.md
LMDB2GraphQL/.planning/todos/pending/: 2026-06-30-bound-lmdb-read-concurrency-maxreaders.md
LMDB2GraphQL/config/: lmdb2graphql.yaml  lmdb2graphql.yaml.example
LMDB2GraphQL/docs/: FRONTEND_SPEC.md
LMDB2GraphQL/reference/: PROVENANCE.md  golpe.yaml
LMDB2GraphQL/reference/lmdbxx/: lmdb++.h
LMDB2GraphQL/src/: config.rs  lib.rs  main.rs  server.rs
LMDB2GraphQL/src/graphql/: mod.rs  resolvers.rs  schema.rs  types.rs
LMDB2GraphQL/src/lmdb/: indexes.rs  meta.rs  mod.rs  payload.rs
LMDB2GraphQL/src/query/: authors.rs  engine.rs  hydrate.rs  merge.rs  mod.rs
LMDB2GraphQL/tests/: authors_test.rs  body_limit_test.rs  comparator_hook_smoke.rs  cors_test.rs  generate_fixture.sh  ready_window_test.rs  scan_test.rs  self_check_test.rs
LMDB2GraphQL/tests/fixture/: data.mdb  seed_events.jsonl
LMDB2GraphQL/tests/fixture/golden_vectors/: Event__created_at.json  Event__id.json  Event__pubkey.json  Event__pubkeyKind.json  Event__tag.json
spam/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml  spec.md
spam/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
spam/.planning/debug/: cursor-fat-group-stranding.md
spam/.planning/debug/resolved/: cursor-fat-group-stranding.md
spam/.planning/phases/01-lmdb-foundation-comparator-proof/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
spam/.planning/phases/02-payload-decoding-index-scan-primitives/: 02-01-SUMMARY.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md  deferred-items.md
spam/.planning/phases/03-query-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-SUMMARY.md  03-08-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-11-SUMMARY.md  03-PATTERNS.md  03-REVIEW.md  03-VERIFICATION.md
spam/.planning/phases/04-graphql-api/: 04-02-PLAN.md  04-02-SUMMARY.md  04-REVIEW-FIX.md  04-REVIEW.md
spam/.planning/phases/05-hardening-docker-packaging/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-VERIFICATION.md
spam/.planning/quick/260615-1e6-fixture-free-self-check/: 260615-1e6-SUMMARY.md  deferred-items.md
spam/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
spam/config/: lmdb2graphql.yaml.example
spam/reference/: PROVENANCE.md  golpe.yaml  golpe_comparators.cpp
spam/src/: config.rs  lib.rs  main.rs  server.rs
spam/src/graphql/: mod.rs  resolvers.rs  schema.rs  types.rs
spam/src/lmdb/: comparators.rs  env.rs  indexes.rs  mod.rs  payload.rs  scan.rs  self_check.rs  types.rs
spam/src/query/: engine.rs  filter.rs  hydrate.rs  merge.rs  mod.rs  router.rs
spam/tests/: body_limit_test.rs  comparator_hook_smoke.rs  dupsort_resume_test.rs  health_ready_test.rs  payload_test.rs  ready_window_test.rs  self_check_test.rs
spam/tests/fixture/: lock.mdb
spam/tests/fixture/golden_vectors/: Event__created_at.json  Event__id.json  Event__kind.json  Event__pubkey.json  Event__pubkeyKind.json  Event__tag.json
spamhunter/pubkey_iterator/: .gitignore  Cargo.toml  README.md  pubkey_iterator_config.example.toml
spamhunter/pubkey_iterator/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
spamhunter/pubkey_iterator/.planning/debug/: scoring-client-unavailable.md
spamhunter/pubkey_iterator/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
spamhunter/pubkey_iterator/src/: config.rs  enumerate.rs  export.rs  fetch.rs  lib.rs  main.rs  model.rs  pipeline.rs  run.rs  tune.rs
(+766 files in other folders)
