[package]
name = "lmdb2graphql"
version = "0.1.0"
edition = "2021"

# NOTE: Core pinned versions per plan 01-01 spec:
#   heed = "0.22.1", tracing = "0.1.44", tracing-subscriber = "0.3.23"
# heed 0.22.1 is now pinned (upgraded from the 0.20.5 deviation of the prior executor run).
# serde_yaml_ng = "0.10" remains deferred — see note below on serde_yaml deviation.
# All required APIs (Comparator trait, key_comparator, open, EnvFlags::READ_ONLY)
# verified working on heed 0.22.1.

[dependencies]
# heed: LMDB typed wrapper — comparator hook, read-only env open, named-DB open
# Pinned to 0.22.1 per plan 01-01 spec and CLAUDE.md — upgraded from 0.20.5 deviation
heed = "0.22.1"
tracing = "0.1"
# json feature restored — tracing-serde now fetchable (was DEVIATION in prior executor run)
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# serde_yaml_ng: YAML config parsing (DeepFry ~/deepfry/ convention)
# Maintained fork of dtolnay's deprecated serde_yaml — same API, actively maintained
# [APPROVED] plan 02 Task 1 package legitimacy checkpoint — confirmed canonical crate
serde_yaml_ng = "0.10"
# dirs: resolves ~/deepfry/ home directory path
# [APPROVED] plan 02 Task 1 package legitimacy checkpoint
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
