[package]
name = "pubkey_iterator"
version = "0.1.0"
edition = "2021"

# Dependencies land in their owning phase (stack discipline). Phase 1 added the
# persistence subset (rusqlite/serde/serde_json/flume); Phase 2 owns the GraphQL
# transport (reqwest/tokio/thiserror); Phase 3 owns rayon (the pipeline's CPU
# consumer stage). The remainder (clap/gaoya/linfa) stays for its owning phase —
# do NOT add the detection deps (gaoya/linfa) or the full clap CLI surface here.
# The connectivity-proving binary (plan 02-03, D-12): a minimal `--resume`
# entry point over the public lib API. The crate stays a library + this one bin;
# the full clap `run`/`export` surface is Phase 5.
[[bin]]
name = "pubkey_iterator"
path = "src/main.rs"

[dependencies]
# rusqlite: synchronous embedded SQLite. `bundled` compiles SQLite in (no system
# libsqlite3, reproducible across hosts). sqlx was REJECTED for v1 per STACK.md:
# async + compile-time query checking needs a live DB at build time and a runtime
# around every query — wrong tradeoff for a single-writer local batch.
rusqlite = { version = "0.40", features = ["bundled"] }
# serde: derive (de)serialization for JSON columns (config_json, evidence).
serde = { version = "1.0", features = ["derive"] }
# serde_json: serialize/deserialize the JSON-typed columns.
serde_json = "1.0"
# flume: the analyze->writer channel seam (project-standard channel per STACK.md).
flume = "0.12"
# reqwest: GraphQL-over-HTTP transport. No TLS feature — the adapter default-binds
# loopback plain HTTP (contract §10); a future HTTPS deployment adds rustls-tls (Phase 4).
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2"] }
# tokio: async runtime for reqwest. `time` is for plan-03's tokio::time::sleep backoff,
# added here at dep-introduction so Phase 3 inherits it without a manifest change.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# thiserror: derive the two-layer ClientError taxonomy (transport vs in-body GraphQL).
thiserror = "2"
# rayon: the CPU analysis thread pool for the pipeline's consumer stage (Phase-3-
# owned add). The bounded flume channel feeds a rayon/std::thread drain so CPU work
# runs off the tokio reactor (D-05); Phase 4 fans out per-group scoring here.
rayon = "1.12"

[dev-dependencies]
# tempfile: temp-FILE-backed DB so tests exercise real WAL on-disk behavior
# (the -wal/-shm sidecars), which a :memory: DB does not replicate.
tempfile = "3.27"
